--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,38 +1,91 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
-
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
+}
+.App-header {
+	background-color:beige;
+	min-height: 10vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+}
+.App-link {
+	color: #61dafb;
+}
+@keyframes App-logo-spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+.header {
+	background-color: black;
+	color: white;
+	text-align: center;
+	margin: 0 auto;
+	padding: 1rem;
+}
+.listName {
+	margin: 1rem;
+	background-color: teal;
+	font-size: large;
+	color: white;
+}
+.listItems {
+	margin: 1rem;
+	border: solid;
+	background-color: beige;
+}
+.shipDetails {
+	border: solid;
+	margin: 1rem;
+  background-color: teal;
+}
+.navLink {
+  margin: 1rem;
+  max-height: 10%;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: blue;
+}
+.nameAndModel {
+	margin: 1rem;
+	text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.listItems{
+  display:flex;
+  flex-wrap:wrap ;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 10px;
+}
+
+button {
+  margin: 1rem;
+  background-color: teal;
+  font-size: large;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 20px;
+  border-radius: 4%;
+  border: none;
+  width: 170px;
+  height: 100px;
 }
